Fixed when clicking on a nav option, window scrolls too low. Added functionality to view project btn on project cards

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    scroll-padding-top: 7rem; 
     text-decoration: none;
     font-family: Roboto Mono;
 }
@@ -289,7 +290,7 @@ section{
     padding-right: .5rem;
 }
 
-.btn {
+.project-btn {
     border: 1px solid black;
     padding: 1rem 2rem;
     border-radius: 3rem;
@@ -308,7 +309,7 @@ section{
     text-shadow: 1px 1px 2px black;
 }
 
-.btn:hover{
+.project-btn:hover{
     transform: scale(1.05);
     box-shadow: 0 0 25px var(--main-color),
                 0 0 50px var(--main-color);
